k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patients-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patients-backend
  template:
    metadata:
      labels:
        app: patients-backend
    spec:
      containers:
        - name: patients-backend
          image: thelissimus/hs-challenge-backend:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: patients-backend
spec:
  type: NodePort
  selector:
    app: patients-backend
  ports:
    - port: 8080
      targetPort: 8080
