k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patients-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patients-frontend
  template:
    metadata:
      labels:
        app: patients-frontend
    spec:
      containers:
        - name: patients-frontend
          image: thelissimus/hs-challenge-frontend:latest
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: patients-frontend
spec:
  type: NodePort
  selector:
    app: patients-frontend
  ports:
    - port: 80
      targetPort: 80
